estrcutura inicial de la Cabecera Please enter the commit message for your changes. Lines starting

--- a/blogpost.html.html
+++ b/blogpost.html.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera">
-            cabecera
+            <div id="Cabecera">
+                Cabecera
             </div>
             <div id="post">
         <h1>este es el titulo</h1>
