--- a/blogpost.html.html
+++ b/blogpost.html.html
@@ -7,6 +7,7 @@
         <div id="container">
             <div id="Cabecera">
                 Cabecera
+                <p>la vida se trata de muchas cosas que debemos hacer con todo</p>
             </div>
             <div id="post">
         <h1>este es el titulo</h1>
