blogpost.html.html

--- a/blogpost.html.html
+++ b/blogpost.html.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <div id="container">
-            <div id="Cabecera">
-                Cabecera
-                <p>la vida se trata de muchas cosas que debemos hacer con todo</p>
+            <div id="cabecera">
+                cabecera
+             trata de muchas cosas que debemos hacer con todo</p>
             </div>
             <div id="post">
         <h1>este es el titulo</h1>
