finalizada la cabecera con diseño azul

--- a/blogpost.html.html
+++ b/blogpost.html.html
@@ -6,6 +6,10 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                Hyperblog
+                <span id="tagline">
+                    tu blog de confianza
+                </span>
                 cabecera
              trata de muchas cosas que debemos hacer con todo</p>
             </div>
