Agregado el contenido adicional del blog

--- a/blogpost.html.html
+++ b/blogpost.html.html
@@ -8,7 +8,7 @@
             <div id="post">
         <h1>este es el titulo</h1>
         <p>el parrafo donde vamos incluir informacion que tengamos que llenar</p>
-    </div>
+        <p>La vida es como la vivimos y como la expresamos y sentimos tenemos que  aprender a convivir con ella  todo es un desafio </p>
     </div>
     </body>
 </html>
