--- a/blogpost.html.html
+++ b/blogpost.html.html
@@ -5,21 +5,16 @@
     </head>
     <body>
         <div id="container">
-            <div id="post">
-        <h1>este es el titulo</h1>
-        <p>el parrafo donde vamos incluir informacion que tengamos que llenar</p>
-        <p>La vida es como la vivimos y como la expresamos y sentimos tenemos que  aprender a convivir con ella  todo es un desafio </p>
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">
                     tu blog de confianza
                 </span>
-                cabecera
-             trata de muchas cosas que debemos hacer con todo</p>
             </div>
             <div id="post">
         <h1>este es el titulo</h1>
         <p>el parrafo donde vamos incluir informacion que tengamos que llenar</p>
+        <p>las cosas son dificiles hay que aprender a vivirlas </p>
     </div>
     </div>
     </body>
