agregue parrafo y cambie la cabecera maestra y esta azul

--- a/blogpost.html.html
+++ b/blogpost.html.html
@@ -8,13 +8,14 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">
-                    tu blog de confianza
+                    tu blog de maestro
                 </span>
             </div>
             <div id="post">
         <h1>este es el titulo</h1>
         <p>el parrafo donde vamos incluir informacion que tengamos que llenar</p>
         <p>las cosas son dificiles hay que aprender a vivirlas </p>
+        <p>vamos con toda la vida </p>
     </div>
     </div>
     </body>
