--- a/blogpost.html.html
+++ b/blogpost.html.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del blog</title>
+        <title>Bienvenidos hyperblog </title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
