--- a/blogpost.html.html
+++ b/blogpost.html.html
@@ -14,6 +14,7 @@
             <div id="post">
         <h1>este es el titulo</h1>
         <p>el parrafo donde vamos incluir informacion que tengamos que llenar</p>
+        <p><img src="imagenes/image.jpg.jpg" alt="100%"></p>
         <p>las cosas son dificiles hay que aprender a vivirlas </p>
         <p>vamos con toda la vida </p>
     </div>
